@@ -390,6 +390,7 @@
 #gptofoo escp2-rx510 printer/Epson-Stylus_Photo_RX510
 #gptofoo escp2-rx560 printer/Epson-Stylus_Photo_RX560
 #gptofoo escp2-rx580 printer/Epson-Stylus_Photo_RX580
+#gptofoo escp2-rx590 printer/Epson-Stylus_Photo_RX590
 #gptofoo escp2-rx600 printer/Epson-Stylus_Photo_RX600
 #gptofoo escp2-rx620 printer/Epson-Stylus_Photo_RX620
 #gptofoo escp2-rx630 printer/Epson-Stylus_Photo_RX630
