@@ -1,5 +1,5 @@
 /*
- * "$Id: print-escp2-data.c,v 1.226 2007/05/27 17:59:50 rlk Exp $"
+ * "$Id: print-escp2-data.c,v 1.227 2007/05/28 23:38:16 rlk Exp $"
  *
  *   Print plug-in EPSON ESC/P2 driver for the GIMP.
  *
@@ -1892,6 +1892,24 @@ const stpi_escp2_printer_t stpi_escp2_model_capabilities[] =
     variable_bits, variable_base_res, "cd_roll_feed",
     "standard", &new_init_sequence, &je_deinit_sequence,
     &spr300_borderless_sequence, NULL, "standard"
+  },
+  /* 84: Stylus Photo RX500 */
+  {
+    (MODEL_VARIABLE_YES | MODEL_COMMAND_2000 | MODEL_GRAYMODE_YES |
+     MODEL_ZEROMARGIN_FULL | MODEL_VACUUM_NO | MODEL_FAST_360_NO |
+     MODEL_SEND_ZERO_ADVANCE_YES | MODEL_SUPPORTS_INK_CHANGE_NO |
+     MODEL_PACKET_MODE_YES),
+    90, 1, 3, 90, 1, 3, 90, 1, 3, 6,
+    360, 14400, -1, 2880, 1440, 360, 120,
+    0, 1, 0, 80, 42, 0, 0, 0, 1, 28800, 1440 * 1440,
+    INCH(17 / 2), INCH(1200), INCH(2), INCH(2),
+    9, 9, 0, 9, 9, 9, 0, 9, 9, 9, 0, 0, 9, 9, 0, 0, 204, 191, 595, 842, 24,
+    4, 15, 0, 0,
+    p3pl_dotsizes, p3pl_densities, "variable_3pl_pmg",
+    "superfine", "photo_gen3",
+    variable_bits, variable_base_res, "cd_roll_feed",
+    "standard", &new_init_sequence, &je_deinit_sequence,
+    &sprx500_borderless_sequence, NULL, "photo"
   },
 };
 
